--- a/my_website/index.html
+++ b/my_website/index.html
@@ -80,7 +80,7 @@ function closeNav() {
     <meta charset="utf-8">
     <center><title>Home</title>
   
-    <h1>This is my Home Page!</h1>
+    <h1>This is Kainoa's Home Page!</h1>
     <img src="images/home.png" height="250" alt="Home Picture">
 <br> 
 <br>
