Changed the heading

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -80,16 +80,26 @@ function closeNav() {
 	  
     <center><img src="images/portfolio.jpg" alt="Sign with the word Portfolio" height="250"></center>
     <br>
-    <p> <a href="ai2.appinventor.mit.edu/?galleryId=6699949883523072" target="_blank">Link to MIT App Inventor</a> </p>
     <p style="font-size:25px;" style="font-family:courier;">This is my Scratch Game</p>
     <center><a target="_blank" href="https://scratch.mit.edu/projects/246137505/#fullscreen">
       <img src="images/scratch_logo.png" alt="Scratch icon" height="100"></center>
+    <br>
     <center><a target="_blank" href="https://scratch.mit.edu/projects/247561584/#fullscreen">
       <img src="images/scratch_logo.png" alt="Scratch icon" height="100"></center>
-    <center> <a href="http://ai2.appinventor.mit.edu/?galleryId=6699949883523072" target="_blank">Link to MIT App Inventor</a></center>
+    <br>
+    <center> <a target="_blank" href="http://ai2.appinventor.mit.edu/?galleryId=6699949883523072">
       <img src="images/Mit_app_inventor.png" alt="MIT app inventor" height="100"></center>
+    <br>
     <center> <a href="https://president-game.deanh505.repl.run/" target="_blank">
       <img src="images/python_logo.png" alt="Pythons actual logo" height="100"></center>
+    <center> <a href="https://drive.google.com/file/d/1FkoAqpUCmXrY-OJDNQY9gttZAZbBaM0N/view?usp=sharing" target="_blank">
+      <embed width="600" height="300" src="images/Gun.pdf" alt="Smart gun artifact" height="100"></center>
+    <center> <a href="https://docs.google.com/document/d/1iwEwT7bfbhynJ_qs8_xgrjoY1IBZu4GAnTITN0kDolM/edit?usp=sharing" target="_blank">
+      <embed width="600" height="600" src="images/Response.pdf" alt="Smart Gun Explore Task Response" height="100"></center>
+      
     </a>
+    <br>
+    <center><img src="images/graduation-3870756_960_720.png" alt="Hat and Scroll" height="250"></center>
+    
 	  </body></center>
 	</html>
