--- a/my_website/resume.html
+++ b/my_website/resume.html
@@ -69,7 +69,7 @@ function closeNav() {
     </head><body background="images/final_boss.jpg"><center><title>Resume</title>
   
     <h1 style="color:#404040;">This is my Resume!</h1>
-  <embed width="600" height="600" src="images/(Clean Version) My AP Class Resume, Potter, Kainoa.pdf" type="application/pdf" internalinstanceid="4">
+  <embed width="600" height="600" src="images/(Clean Version) My AP Class Resume, Potter, Kainoa - Google Docs.pdf" type="application/pdf" internalinstanceid="4">
  </center>
  <button onclick="myFunction()">Click me.</button>
   <script>
